<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
  <ImageView
      android:id="@+id/logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="150dp"
      android:importantForAccessibility="no"
      android:src="@drawable/logoyellow"/>
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/logo"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#292929"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/loginTitle"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:autofillHints="emailAddress"
        android:textColorHint="#5A5A5A"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_border"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#5A5A5A"
        android:inputType="textVisiblePassword"
        android:background="@drawable/edittext_border"
        />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:text="@string/sign_in"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signIn"
         android:layout_marginStart="50dp"
         android:layout_centerHorizontal="true"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/don_t_have_an_account"
             android:textColor="#292929"
             android:textSize="19sp"
             />
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:text="@string/sign_up"
             android:textColor="#F67F00"
             android:padding="0dp"
             android:textSize="20sp"
             android:textAllCaps="false"

             />


     </LinearLayout>



</RelativeLayout>