<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/white"

    >
<RelativeLayout
    android:id="@+id/firstYellow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F67F00"
    android:paddingVertical="20dp"
    tools:ignore="UselessParent">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logowhite"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        tools:ignore="HardcodedText" />
</RelativeLayout>
    <TextView
        android:id="@+id/firstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_would_you_like_us_to_come"
        android:textColor="#292929"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/firstYellow"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <RelativeLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstText"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/longitude"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:padding="10dp"
            android:layout_alignParentStart="true"
            android:inputType="none"
            android:textColorHint="#5A5A5A"
           android:layout_centerVertical="true"
            android:background="@drawable/edittext_border"
            android:focusable="false"
            android:clickable="false"
            android:enabled="false"
            android:hint="@string/longitude"
            />
        <EditText
            android:id="@+id/latitude"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="none"
            android:textColorHint="#5A5A5A"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:focusable="false"
            android:clickable="false"
            android:enabled="false"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/latitude"
            />


    </RelativeLayout>

    <ImageButton
        android:id="@+id/locate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/detect_location"
        android:src="@drawable/locationbutton"
        android:background="@color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/inputs"
        android:layout_marginTop="20dp"/>
    <ImageView
        android:id="@+id/firstLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/just_line"
        android:src="@drawable/line"
        android:layout_below="@+id/locate"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>
<TextView
    android:id="@+id/typeText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/vehicle_type"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/firstLine"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:layout_marginTop="15dp"
    />
<RelativeLayout
    android:id="@+id/vehicleType"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/typeText"
    android:layout_marginTop="15dp">
    <ImageButton
        android:id="@+id/twoWheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/twowheel"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:background="@color/transparent"
        />
    <ImageButton
        android:id="@+id/fourWheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fourwheel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:background="@color/transparent"/>
    <ImageView
        android:layout_below="@id/fourWheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_marginTop="15dp"/>


</RelativeLayout>



</RelativeLayout>